<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/selectRecipe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

        </Spinner>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/costSelect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">
        </Spinner>

        <EditText
            android:id="@+id/usageToAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/usage"/>


        <EditText
            android:id="@+id/fixNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/fixOrDeleteNumber"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/addCostToRecipe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/addButton"/>


        <Button
            android:id="@+id/updateCostToRecipe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/updateRecipeButton"/>

        <Button
            android:id="@+id/deleteCostToRecipe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/deleteRecipeButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/locationFieldToChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#ff7f00"
            android:background="@drawable/border"
            />

        <TextView
            android:id="@+id/nameFieldToChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nameText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="3"
            android:textColor="#ff7f00"
            android:background="@drawable/border"
            />

        <TextView
            android:id="@+id/usageFieldToChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/usageFieldTec"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textColor="#ff7f00"
            android:background="@drawable/border"
            />

        <TextView
            android:id="@+id/priceFieldToChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/priceFieldTec"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textColor="#ff7f00"
            android:background="@drawable/border"
            />
    </LinearLayout>
    <ScrollView
        android:id="@+id/recipeContentsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/recipeContentsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/totalMaterialText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/totalRecipeCost"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/totalUsageText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/totalRecipeUsage"
            android:textStyle="bold"
            android:layout_weight="1"
            android:lines="1"/>

        <TextView
            android:id="@+id/totalPriceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/totalRecipePrice"
            android:textStyle="bold"
            android:layout_weight="1"
            android:lines="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/recipeName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/recipeName"/>
        <Button
            android:id="@+id/recipeAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/recipeAdd" />

    </LinearLayout>
</LinearLayout>