<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/insertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/insertButton"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deleteRecipeButton"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/toMainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/toMain"
            android:textStyle="bold"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/recipeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/nameFieldTec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nameText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="3"
            android:textColor="#ff7f00"
            android:background="@drawable/border"
            />

        <TextView
            android:id="@+id/usageFieldTec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/usageFieldTec"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textColor="#ff7f00"
            android:background="@drawable/border"
            />

        <TextView
            android:id="@+id/priceFieldTec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/priceFieldTec"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textColor="#ff7f00"
            android:background="@drawable/border"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/recipeAllView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/totalMaterialInOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/totalRecipeCost"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/totalUsageInOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/totalRecipeUsage"
            android:textStyle="bold"
            android:layout_weight="1"
            android:lines="1"/>

        <TextView
            android:id="@+id/totalPriceInOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/totalRecipePrice"
            android:textStyle="bold"
            android:layout_weight="1"
            android:lines="1"/>

    </LinearLayout>
</LinearLayout>