<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buttonView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </android.support.v7.widget.AppCompatSpinner>

        <Button
            android:id="@+id/costToMainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toMain"
            android:textStyle="bold"
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <me.grantland.widget.AutofitTextView
            android:id="@+id/nameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nameText"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:textColor="#2244FF"
        />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/unitPriceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unitPriceText"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#2244FF"
            />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/weightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weightText"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#2244FF"
            />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/pricePerGramText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/pricePerGramText"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:lines="1"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#2244FF"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/costTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/scrollLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/addView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:hint="추가할 재료명" />

        <EditText
            android:id="@+id/costEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:inputType="number"
            android:background="@drawable/border"
            android:hint="추가할 단가" />

        <EditText
            android:id="@+id/weightEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:inputType="number"
            android:background="@drawable/border"
            android:hint="추가할 양" />

        <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/addButton"
        android:textStyle="bold"/>

        <Button
            android:id="@+id/deleteCostButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/deleteRecipeButton"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>